[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlalchemy-query-utils"
version = "0.1.0"
description = "SQLAlchemy helpers for sorting, filtering, and result shaping."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "XIThing" }]
dependencies = [
    "sqlalchemy>=1.4",
    "pycountry>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]
